# MindsetBackend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/instructions/: MyInstruction.instructions.md
alembic/: env.py
app/: __init__.py  cli.py  config.py  db.py  dtos.py  exceptions.py  models.py  settings.py
app/api/v1/: __init__.py  admin.py  blog.py  course.py  courses.py  courses_docs.py  instructor.py  swagger_docs.py
app/auth/: jwt.py
app/cli/: __init__.py  admin.py  common.py  db.py  delivery_mode.py  event_type.py  registration_status.py  venue.py
app/repositories/: __init__.py  admin.py  base.py  blog.py  course.py  courses.py  delivery_mode.py  event_type.py  instructor.py  registration_status.py  venue.py
app/services/: admin.py  blog.py  course.py  courses.py  delivery_mode.py  event_type.py  instructor.py  registration_status.py  venue.py
docs/: DATABASE.md
migrations/versions/: 2e8b862c11d6_initial_migration.py
postman/: MindsetBackend API.postman_collection.json
tests/: conftest.py
tests/api/: test_health.py
tests/integration/api/: test_courses_api_integration.py
tests/unit/services/: test_course_service.py  test_delivery_mode_service.py  test_event_type_service.py  test_instructor_service.py  test_registration_status_service.py
typings/flasgger/: __init__.pyi  base.pyi  commands.pyi  compatible.pyi  constants.pyi  marshmallow_apispec.pyi  utils.pyi
